--- a/Doc-Portal/td-portal.css
+++ b/Doc-Portal/td-portal.css
@@ -10,6 +10,15 @@ position: relative;
   
 }
 
+@media screen and (min-width: 500px){
+#navbar {
+background-color: rgb(239, 196, 143);
+
+}
+  
+}
+
+
 #scroller {
 
 border-bottom: 2px solid darkgray;
